--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <meta property="og:title" content="Sensor Fusion Framework - Biomedical Data Quality" />
     <meta property="og:description" content="Advanced framework for multimodal biomedical data integration and quality enhancement" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/placeholder.svg" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:site" content="@biofusiondash" />
+    <meta name="twitter:image" content="/placeholder.svg" />
   </head>
 
   <body>
